--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@
           </a>
         </div>
         <div class="card">
-          <a href="Jeans.html">
+          <a href="jeans.html">
             <img src="14.jpg" alt="Jeans" class="card-img-top">
             <span>Jeans</span>
           </a>
